# rpc

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TESTING.md  build.sh  run.sh  test.sh
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  rpc_async_callback_benchmark.cc  rpc_future_benchmark.cc  rpc_payload_size_benchmark.cc  rpc_pool_size_benchmark.cc  rpc_sync_single_benchmark.cc  rpc_sync_threads_benchmark.cc
docs/: concurrency.md  testing.md
examples/: CMakeLists.txt  bad_packet_test.cc  consumer_main.cc  provider_main.cc  service_not_found.cc  user.proto  user_service.h
include/myrpc/: CallbackExecutor.h  ThreadPool.h  common.h  pending_call.h  pending_call_manager.h  rpc_channel.h  rpc_channel_pool.h  rpc_closure.h  rpc_codec.h  rpc_controller.h  rpc_future.h  rpc_provider.h  rpc_timeout_manager.h  rpc_transport.h
services/: user_services.h
src/: ThreadPool.cc  pending_call_manager.cc  rpc_channel.cc  rpc_channel_pool.cc  rpc_codec.cc  rpc_controller.cc  rpc_header.proto  rpc_provider.cc  rpc_timeout_manager.cc  rpc_transport.cc
tests/: 1000request_test.cc  CMakeLists.txt  threadpool_test.cc
tests/integration/: bad_packet_test.cc  batch_async.cc  connection_lost.cc  future_test.cc  multithread_call.cc  normal_async.cc  not_connection.cc  request1000_test.cc  rpc_channel_pool_race_test.cc  rpc_channel_pool_test.cc  rpc_channel_race_test.cc  rpc_channel_timeout_test.cc  service_not_found.cc  service_not_found_test.cc  test_tcp_fragment.cc
tests/integration/tcpserver_for_test/: tcpserver.cc  tcpserver.h
tests/proto/: ghost_service.proto
tests/stress/: CMakeLists.txt  async_sustained_stress.cc  disconnect_repair_stress.cc  submit_stop_race_stress.cc  timeout_stress.cc
tests/unit/: callback_executor_test.cc  pending_call_manager_test.cc  rpc_channel_pool_test.cc  rpc_channel_pool_test1.cc  rpc_channel_pool_test2.cc  rpc_codec_test.cc  rpc_provider_test.cc  rpc_timeout_manager_test.cc  rpc_transport_test.cc  threadpool_test.cc
